--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="col-md-4">
                 <div>
                     <span style="display: flex; align-items: baseline;">
-                        <h1> Ching-Yun Yu </h1>
+                        <h1>Ching-Yun Yu</h1>
                     </span>
                 </div>
                 <!-- Main Image -->
@@ -70,10 +70,10 @@
                 <br>
                 <div><a href="data/Resume_ChingYun_Yu.pdf">CV</a></div> 
                 <br>
-                <dd><a href="https://scholar.google.com/citations?user=M7wJBTIAAAAJ">Google Scholar</a></dd> 
                 <dd><a href="https://linkedin.com/in/chingyunyu">LinkedIn</a></dd>
-                <dd><a href="https://github.com/chingyunyu">GitHub</a></dd>
                 <dd><a href="https://chingyunyu.medium.com">Medium</a></dd>
+                <dd><a href="https://github.com/chingyunyu">GitHub</a></dd>
+                <dd><a href="https://scholar.google.com/citations?user=M7wJBTIAAAAJ">Google Scholar</a></dd> 
             </div>
             <!-- Entries Column -->
             <div class="col-md-8" style="height: 100vh;">
@@ -94,54 +94,54 @@
                 <div class="exp-point">
                     <img src="img/exp/amax.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b> System Engineer </b>
-                        <div> AMAX Engineering, United States </div>
-                        <div> Jul 2024 - Present </div>
+                        <b>System Engineer</b>
+                        <div>AMAX Engineering, United States</div>
+                        <div>Jul 2024 - Present</div>
                     </div>
                 </div>
 
                 <div class="exp-point">
                     <img src="img/edu/mizzou.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b> Research Assistant </b>
-                        <div> University of Missouri, United States </div>
-                        <div> Jun 2022 - May 2023 </div>
+                        <b>Research Assistant</b>
+                        <div>University of Missouri, United States</div>
+                        <div>Jun 2022 - May 2023</div>
                     </div>
                 </div>
 
                 <div class="exp-point">
                     <img src="img/exp/sunbird.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b> Automation Test Intern </b>
-                        <div> Sunbird Software, Taiwan </div>
-                        <div> Sep 2020 -  Mar 2021 </div>
+                        <b>Automation Test Intern</b>
+                        <div>Sunbird Software, Taiwan</div>
+                        <div>Sep 2020 -  Mar 2021</div>
                     </div>
                 </div>
 
                 <div class="exp-point">
                     <img src="img/exp/pentium.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b> Quality Assurance Contractor </b>
-                        <div> Pentium Network, Taiwan </div>
-                        <div> Jul 2020 -  Nov 2020 </div>
+                        <b>Quality Assurance Contractor</b>
+                        <div>Pentium Network, Taiwan</div>
+                        <div>Jul 2020 -  Nov 2020</div>
                     </div>
                 </div>
 
                 <div class="exp-point">
                     <img src="img/exp/chairsla.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b> Backend Software Engineer </b> 
-                        <div> Chairsla Technology, Taiwan </div>
-                        <div> Jul 2019 -  Jan 2020 </div>
+                        <b>Backend Software Engineer</b> 
+                        <div>Chairsla Technology, Taiwan</div>
+                        <div>Jul 2019 -  Jan 2020</div>
                     </div>
                 </div>
 
                 <div class="exp-point">
                     <img src="img/exp/gss.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b> Software Engineer Intern </b> 
-                        <div> CGalaxy Software Services, Taiwan </div>
-                        <div> Jul 2018 -  Jun 2019 </div>
+                        <b>Software Engineer Intern</b> 
+                        <div>Galaxy Software Services, Taiwan</div>
+                        <div>Jul 2018 -  Jun 2019</div>
                     </div>
                 </div>
 
@@ -167,7 +167,7 @@
                         </a>
                     </b>
                     <br> 
-                    <b>Ching-Yun Yu</b>, Yi Shang, Tionna M Hough, Anthony L Bokshan, Megan N Fleming, Alison M Haney, and Timothy J Trull
+                    <b>Ching-Yun Yu</b>, Yi Shang, Tionna Hough, Anthony Bokshan, Megan Fleming, Alison Haney, and Timothy Trull
                     <br>
                     <i>The International Jouranl of Drug and Alcohol Dependence (DAD) 2023</i>
 
