--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img class="img-responsive" src="me.jpg" alt="" width="256" height="256">
                 <br>
                 <p>
-                    <b>chingyun underline yu at amax dot com</b>
+                    <b>chingyun underscore yu at amax dot com</b>
                     <br>
                     AMAX Engineering, California, United States
                     <br>
@@ -182,7 +182,7 @@
                     <br>
                     Jung Hyup Kim, <b>Ching-Yun Yu</b>, Kangwon Seo, Fang Wang, and Danielle Oprean
                     <br>
-                    <i>Proceedings of the Annual Meeting of Human Factors and Ergonomics Society (HFES) 2023</i>
+                    <i>The Annual Meeting of Human Factors and Ergonomics Society (HFES) 2023</i>
 
                     <br>
                     <br>
