--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@
 
                 <div style="margin-top:3%; text-align:justify;">
                     <b>
+                        <a href="https://doi.org/10.1177/10711813241261685">
+                            Understanding the Influence of Fatigue on Full Arm Gestures in Augmented Reality Environments
+                        </a>
+                    </b>
+                    <br>
+                    Jung Hyup Kim, Varun Pulipati, <b>Ching-Yun Yu</b>, and Fang Wang
+                    <br>
+                    <i>The Annual Meeting of Human Factors and Ergonomics Society (HFES) 2024</i>
+
+                    <br>
+                    <br>
+
+                    <b>
                         <a href="https://doi.org/10.1007/978-3-031-61041-7_1">
                             The Effects of a Virtual Instructor with Realistic Lip Sync in an Augmented Reality Environment
                         </a>
