--- a/index.html
+++ b/index.html
@@ -101,27 +101,9 @@
                 </div>
 
                 <div class="exp-point">
-                    <img src="img/edu/mizzou.jpeg" height="64"/>
-                    <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b>Research Assistant</b>
-                        <div>University of Missouri, United States</div>
-                        <div>Jun 2022 - May 2023</div>
-                    </div>
-                </div>
-
-                <div class="exp-point">
-                    <img src="img/exp/sunbird.jpeg" height="64"/>
-                    <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b>Automation Test Intern</b>
-                        <div>Sunbird Software, Taiwan</div>
-                        <div>Sep 2020 -  Mar 2021</div>
-                    </div>
-                </div>
-
-                <div class="exp-point">
                     <img src="img/exp/pentium.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b>Quality Assurance Contractor</b>
+                        <b>QA Test Contractor</b>
                         <div>Pentium Network, Taiwan</div>
                         <div>Jul 2020 -  Nov 2020</div>
                     </div>
@@ -130,7 +112,7 @@
                 <div class="exp-point">
                     <img src="img/exp/chairsla.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b>Backend Software Engineer</b> 
+                        <b>Backend Engineer</b> 
                         <div>Chairsla Technology, Taiwan</div>
                         <div>Jul 2019 -  Jan 2020</div>
                     </div>
@@ -139,7 +121,7 @@
                 <div class="exp-point">
                     <img src="img/exp/gss.jpeg" height="64"/>
                     <div style="margin: 0 16px; display: flex; flex-flow: column;">
-                        <b>Software Engineer Intern</b> 
+                        <b>Software Intern</b> 
                         <div>Galaxy Software Services, Taiwan</div>
                         <div>Jul 2018 -  Jun 2019</div>
                     </div>
